--- a/.github/workflows/storybook_deploy.yml
+++ b/.github/workflows/storybook_deploy.yml
@@ -23,3 +23,8 @@ jobs:
               run: npm run deploy-storybook -- --ci
               env:
                   GH_TOKEN: JoDMsoluth:${{ secrets.GH_TOKEN }}
+            - name: Release
+              run: npx semantic-release
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
