--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seminar-ui",
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.0-development",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "types": "lib/index.d.ts",
@@ -10,14 +10,14 @@
   "description": "2020 mash-up 동아리에서 나만의 디자인 시스템 만들기 세미나 발표자료입니다.",
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoDMsoluth/201212-seminar.git"
+    "url": "https://github.com/JoDMsoluth/201212-seminar.git"
   },
   "keywords": [
     "mash-up"
@@ -33,8 +33,12 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@semantic-release/changelog": "github:semantic-release/changelog",
+    "@semantic-release/git": "^9.0.0",
     "@storybook/addon-actions": "^6.1.10",
     "@storybook/addon-docs": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.10",
@@ -49,8 +53,8 @@
     "@types/styled-components": "^5.1.4",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
-    "core-js": "^3.8.1",
     "css-loader": "^5.0.1",
+    "husky": "^4.3.4",
     "rollup": "^2.34.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sass": "^1.2.2",
@@ -71,5 +75,15 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
