--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/styled-components": "^5.1.4",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
+    "core-js": "^3.8.1",
     "css-loader": "^5.0.1",
     "husky": "^4.3.4",
     "rollup": "^2.34.2",
