--- a/.github/workflows/storybook_deploy.yml
+++ b/.github/workflows/storybook_deploy.yml
@@ -20,7 +20,7 @@ jobs:
                   GH_TOKEN: JoDMsoluth:${{ secrets.GH_TOKEN }}
             - run: npm run build
             - name: Release
-              run: npx semantic-release --no-ci
+              run: npx semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
