--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-docs": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-knobs": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addons": "^6.1.10",
     "@storybook/preset-typescript": "^3.0.0",
@@ -56,6 +57,8 @@
     "core-js": "^3.8.1",
     "css-loader": "^5.0.1",
     "husky": "^4.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rollup": "^2.34.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sass": "^1.2.2",
@@ -71,10 +74,6 @@
     "react-dom": "^17.0.1",
     "sass": "^1.30.0",
     "styled-components": "^5.2.1"
-  },
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
   },
   "commitlint": {
     "extends": [
